# tp1-restorrente

./: .travis.yml  README.md  build.sh  filter_options  idea1  linter.sh  orderLog.py  release_files.sh  run.sh  run_with_log_file.sh
src/: CMakeLists.txt  CashRegister.cpp  CashRegister.h  ClientsGroup.h  Config.cpp  Config.h  DishesQueue.cpp  DishesQueue.h  Door.cpp  Door.h  DoorInside.cpp  DoorInside.h  DoorOutside.cpp  DoorOutside.h  ExampleProcess.cpp  ExampleProcess.h  Kitchen.cpp  Kitchen.h  LobbyMonitor.cpp  LobbyMonitor.h  Logger.cpp  Logger.h  Main.cpp  MyProcess.cpp  MyProcess.h  OSException.cpp  OrdersQueue.cpp  OrdersQueue.h  RandomSleep.cpp  RandomSleep.h  Receptionist.cpp  Receptionist.h  SignalHandler.h  Table.cpp  Table.h  WaitersQueue.cpp  WaitersQueue.h  ej1-shared-mem.cpp  tp1-restorrente.cpp
src/data/: Config.cpp  Config.h  conf
src/domain/: ClientsGroup.cpp  ClientsGroup.h  Food.cpp  Food.h  NullClientsGroup.cpp  NullClientsGroup.h  Order.h
src/event_handlers/: KillHandler.cpp  KillHandler.h  LightHandler.cpp  LightHandler.h  ManagerKillHandler.cpp  ManagerKillHandler.h  ProcesesKillHandler.cpp  ProcesesKillHandler.h  TableKillHandler.cpp  TableKillHandler.h
src/processes/: ClientsGenerator.cpp  ClientsGenerator.h  Manager.cpp  Manager.h  Waiter.cpp  Waiter.h
src/utils/: Clock.cpp  Clock.h  EventHandler.h  LockFile.cpp  LockFile.h  LockedScope.h  Logger.cpp  Logger.h  Mutex.cpp  Mutex.h  MyProcess.cpp  MyProcess.h  OSException.cpp  OSException.h  Semaforo.cpp  Semaforo.h  Semaphore.cpp  Semaphore.h  SharedMemory.h  SignalHandler.cpp  SignalHandler.h  Singleton.h
src/utils/Fifos/: Fifo.cpp  Fifo.h  FifoRead.cpp  FifoRead.h  FifoWrite.cpp  FifoWrite.h
